# Words

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Overview.md  README.md
.github/ISSUE_TEMPLATE/: action-task.md  user-story.md
.github/workflows/: cmake.yml
controller/: CommandFactory.cpp  CommandFactory.h  CommandFactoryAutoRegister.cpp  CommandFactoryAutoRegister.h  UndoRedoManager.cpp  UndoRedoManager.h
json/: json11.cpp
model/: Command.h  InsertCharacterAtIndexCommand.cpp  InsertCharacterAtIndexCommand.h  RemoveCharacterAtIndexCommand.cpp  RemoveCharacterAtIndexCommand.h  StoredString.cpp  StoredString.h
tests/: CommandFactoryTests.cpp  ScriptingTests.cpp  commandTests.cpp  tests.cpp  undoRedoTests.cpp
